# Cubechance

./: .gitignore  Cargo.toml  LICENSE  Procfile  Style.txt
Elm/: Base.elm  Comp.elm  Index.elm  base.elm  comp.elm  elm-package.json  index.elm  make.py  tetris.elm
Elm/elm-stuff/build-artifacts/0.18.0/user/project/1.0.0/: Base.elmi  Base.elmo  Main.elmi  Main.elmo
Static/: Comp.js  Index.html  base.js  codestyle-github.com  comp.html  comp.js  cubing-icons.css  index.html  index.js  rest.html  style_base.css  tetris.html  tetris.js
icons-gh-pages/: index.html
src/: main.rs  not_found.html  wca.rs
src/test/: mod.rs
src/wca/: mod.rs  wca_competitors.rs  wca_export.rs
