[package]
name = "net"
version = "0.1.0"
authors = ["loovjo <jonathan.loov@gmail.com>"]

[dependencies]
rocket = "0.3.12"
rocket_codegen = "0.3.12"

zip = "0.4.0"
reqwest = "0.8.6"
chrono = "0.4.2"
select = "0.4.2"
statrs = "0.9.0"
rand = "0.5.0"
rayon = "1.0.1"

serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.19"

lazy_static = "1.0.1"
