[package]
name = "net"
version = "0.1.0"
authors = ["loovjo <jonathan.loov@gmail.com>"]

[dependencies]
actix-web = "0.7"
actix-rt = "0.2"

zip = "0.4"
reqwest = "0.9"
chrono = "0.4"
select = "0.4"
statrs = "0.9"
rand = "0.5"
rayon = "1.0"
percent-encoding = "1.0"
unicode-normalization = "0.1"
levenshtein = "1.0"
fuzz-search = "0.1"

base64 = "0.10"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

lazy_static = "1.0"
